--- a/css web/screen.css
+++ b/css web/screen.css
@@ -155,11 +155,18 @@ footer{
 }
 .image-banner{
     position: relative;
+    overflow: hidden;
 
 }
 .image-banner img{
     display: block;
     height: 500px;
+   transition: 1s all;
+
+}
+.image-banner:hover img{
+    transform: scale(1.5);
+    
 }
 .banner-description{
     color: white;
@@ -168,9 +175,17 @@ footer{
     bottom: 0;
     left: 0;
     padding: 15px 20px;
+    transition-property: all;
+    opacity: 0;
+    transition-duration: 1s;
+    transform: translateY(100%);
 }
 
+.image-banner:hover .banner-description{
+    transform: translateY(0);
+    opacity: 1;
 
+}
 
 /* tables styles  */
 table {
@@ -333,9 +348,25 @@ input[type="submit"]:focus{
 }
 
 
+.box-b{
+    text-align: center;
+    background-color: blue;
+    width: 200px;
+    height: 200px;
+    line-height: 200px;
+    margin-bottom: 40px;
+    border-radius: 50%;
+    transition: all 1s;
+    transition-timing-function: ease-out ;
+    color: white;
+}
+.box-b:hover {
+transform: rotate(360deg);
+}
+/* 
 
 /* Media Queries  */
-@media screen and (min-width: 1300px){
+/* @media screen and (min-width: 1300px){
     .container{
         max-width: 1200px;
     }
@@ -375,5 +406,79 @@ input[type="submit"]:focus{
     }
 
 
+} */ */
+
+
+
+
+
+
+
+
+/* Responsive Grid System  */
+.row{
+    margin-right: -20px;
+}
+.col {
+    float: left;
+    width: 100%;
+    padding-right: 20px;
+    box-sizing: border-box;
 }
 
+.col-xs-1{ width: 8.332%;}
+.col-xs-2{width: 16.662%;}
+.col-xs-3{width: 25%;}
+.col-xs-4{width: 33.332%;}
+.col-xs-5{width: 41.662%;}
+.col-xs-6{width: 50%;}
+.col-xs-7{width: 58.331%;}
+.col-xs-8{width: 66.662%;}
+.col-xs-9{width: 75%;}
+.col-xs-10{width: 83.332%;}
+.col-xs-11{width: 91.662%;}
+
+@media screen and (min-width: 768px){
+
+   
+    .col-sm-1{ width: 8.332%;}
+    .col-sm-2{width: 16.662%;}
+    .col-sm-3{width: 25%;}
+    .col-sm-4{width: 33.332%;}
+    .col-sm-5{width: 41.662%;}
+    .col-sm-6{width: 50%;}
+    .col-sm-7{width: 58.331%;}
+    .col-sm-8{width: 66.662%;}
+    .col-sm-9{width: 75%;}
+    .col-sm-10{width: 83.332%;}
+    .col-sm-11{width: 91.662%;}
+}
+
+
+@media screen and (min-width: 928px){
+    .col-md-1{ width: 8.332%;}
+    .col-md-2{width: 16.662%;}
+    .col-md-3{width: 25%;}
+    .col-md-4{width: 33.332%;}
+    .col-md-5{width: 41.662%;}
+    .col-md-6{width: 50%;}
+    .col-md-7{width: 58.331%;}
+    .col-md-8{width: 66.662%;}
+    .col-md-9{width: 75%;}
+    .col-md-10{width: 83.332%;}
+    .col-md-11{width: 91.662%;}
+}
+
+@media screen and (min-width: 1240px){
+    .col-lg-1{ width: 8.332%;}
+    .col-lg-2{width: 16.662%;}
+    .col-lg-3{width: 25%;}
+    .col-lg-4{width: 33.332%;}
+    .col-lg-5{width: 41.662%;}
+    .col-lg-6{width: 50%;}
+    .col-lg-7{width: 58.331%;}
+    .col-lg-8{width: 66.662%;}
+    .col-lg-9{width: 75%;}
+    .col-lg-10{width: 83.332%;}
+    .col-lg-11{width: 91.662%;}
+}
